Stalker2PakCfgMergeTool/grammar/Stalker2CfgParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from f:/Apps/Stalker2Modding/Stalker2PakCfgMergeTool/Stalker2PakCfgMergeTool/grammar/Stalker2Cfg.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class Stalker2CfgParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, SINGLE_LINE_COMMENT=3, INLINE_COMMENT=4, STRUCT_START=5, 
		STRUCT_END=6, STRUCT_KEY=7, ASSIGNMENT=8, PERCENTAGE=9, INTEGER=10, NUMBER=11, 
		LITERAL=12, PATH_VAL=13, STRING_ARRAY=14, STRING=15, PATH_REF=16, NEWLINE=17, 
		STRUCT_LITERAL=18, KV_SEPARATOR=19, OPEN_BRACE=20, CLOSE_BRACE=21, WS=22;
	public const int
		RULE_cfg = 0, RULE_map = 1, RULE_pair = 2, RULE_struct_pair = 3, RULE_struct_ref = 4, 
		RULE_value = 5, RULE_key = 6, RULE_array_ref = 7, RULE_set_ref = 8, RULE_number = 9, 
		RULE_struct_key = 10;
	public static readonly string[] ruleNames = {
		"cfg", "map", "pair", "struct_pair", "struct_ref", "value", "key", "array_ref", 
		"set_ref", "number", "struct_key"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'*'", null, null, null, "'struct.end'", null, "'='", null, 
		null, null, null, null, null, null, null, null, "'bskipref'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "SINGLE_LINE_COMMENT", "INLINE_COMMENT", "STRUCT_START", 
		"STRUCT_END", "STRUCT_KEY", "ASSIGNMENT", "PERCENTAGE", "INTEGER", "NUMBER", 
		"LITERAL", "PATH_VAL", "STRING_ARRAY", "STRING", "PATH_REF", "NEWLINE", 
		"STRUCT_LITERAL", "KV_SEPARATOR", "OPEN_BRACE", "CLOSE_BRACE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Stalker2Cfg.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static Stalker2CfgParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public Stalker2CfgParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public Stalker2CfgParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CfgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(Stalker2CfgParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MapContext[] map() {
			return GetRuleContexts<MapContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MapContext map(int i) {
			return GetRuleContext<MapContext>(i);
		}
		public CfgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cfg; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCfg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CfgContext cfg() {
		CfgContext _localctx = new CfgContext(Context, State);
		EnterRule(_localctx, 0, RULE_cfg);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 25;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1212552L) != 0)) {
				{
				{
				State = 22;
				map();
				}
				}
				State = 27;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 28;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MapContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public KeyContext key() {
			return GetRuleContext<KeyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRUCT_START() { return GetToken(Stalker2CfgParser.STRUCT_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(Stalker2CfgParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(Stalker2CfgParser.NEWLINE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRUCT_END() { return GetToken(Stalker2CfgParser.STRUCT_END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Struct_refContext[] struct_ref() {
			return GetRuleContexts<Struct_refContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_refContext struct_ref(int i) {
			return GetRuleContext<Struct_refContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PairContext[] pair() {
			return GetRuleContexts<PairContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PairContext pair(int i) {
			return GetRuleContext<PairContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MapContext[] map() {
			return GetRuleContexts<MapContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MapContext map(int i) {
			return GetRuleContext<MapContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SINGLE_LINE_COMMENT() { return GetToken(Stalker2CfgParser.SINGLE_LINE_COMMENT, 0); }
		public MapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_map; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMap(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MapContext map() {
		MapContext _localctx = new MapContext(Context, State);
		EnterRule(_localctx, 2, RULE_map);
		int _la;
		try {
			State = 52;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRUCT_KEY:
			case STRING:
			case OPEN_BRACE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 30;
				key();
				State = 31;
				Match(STRUCT_START);
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==OPEN_BRACE) {
					{
					{
					State = 32;
					struct_ref();
					}
					}
					State = 37;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 38;
				Match(NEWLINE);
				State = 43;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1212552L) != 0)) {
					{
					State = 41;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						State = 39;
						pair();
						}
						break;
					case 2:
						{
						State = 40;
						map();
						}
						break;
					}
					}
					State = 45;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 46;
				Match(STRUCT_END);
				State = 48;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 47;
					Match(NEWLINE);
					}
					break;
				}
				}
				break;
			case SINGLE_LINE_COMMENT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 50;
				Match(SINGLE_LINE_COMMENT);
				}
				break;
			case NEWLINE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 51;
				Match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PairContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public KeyContext key() {
			return GetRuleContext<KeyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGNMENT() { return GetToken(Stalker2CfgParser.ASSIGNMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(Stalker2CfgParser.NEWLINE, 0); }
		public PairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pair; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPair(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PairContext pair() {
		PairContext _localctx = new PairContext(Context, State);
		EnterRule(_localctx, 4, RULE_pair);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			key();
			State = 55;
			Match(ASSIGNMENT);
			State = 57;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 56;
				value();
				}
				break;
			}
			State = 60;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 59;
				Match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_pairContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PairContext pair() {
			return GetRuleContext<PairContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRUCT_LITERAL() { return GetToken(Stalker2CfgParser.STRUCT_LITERAL, 0); }
		public Struct_pairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_pair; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStruct_pair(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Struct_pairContext struct_pair() {
		Struct_pairContext _localctx = new Struct_pairContext(Context, State);
		EnterRule(_localctx, 6, RULE_struct_pair);
		try {
			State = 64;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRUCT_KEY:
			case STRING:
			case OPEN_BRACE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 62;
				pair();
				}
				break;
			case STRUCT_LITERAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 63;
				Match(STRUCT_LITERAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_refContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_BRACE() { return GetToken(Stalker2CfgParser.OPEN_BRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Struct_pairContext struct_pair() {
			return GetRuleContext<Struct_pairContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_BRACE() { return GetToken(Stalker2CfgParser.CLOSE_BRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] KV_SEPARATOR() { return GetTokens(Stalker2CfgParser.KV_SEPARATOR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KV_SEPARATOR(int i) {
			return GetToken(Stalker2CfgParser.KV_SEPARATOR, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PairContext[] pair() {
			return GetRuleContexts<PairContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PairContext pair(int i) {
			return GetRuleContext<PairContext>(i);
		}
		public Struct_refContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_ref; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStruct_ref(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Struct_refContext struct_ref() {
		Struct_refContext _localctx = new Struct_refContext(Context, State);
		EnterRule(_localctx, 8, RULE_struct_ref);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			Match(OPEN_BRACE);
			State = 67;
			struct_pair();
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KV_SEPARATOR) {
				{
				{
				State = 68;
				Match(KV_SEPARATOR);
				State = 69;
				pair();
				}
				}
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 75;
			Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LITERAL() { return GetToken(Stalker2CfgParser.LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(Stalker2CfgParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(Stalker2CfgParser.STRING, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PATH_REF() { return GetToken(Stalker2CfgParser.PATH_REF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Array_refContext array_ref() {
			return GetRuleContext<Array_refContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PATH_VAL() { return GetToken(Stalker2CfgParser.PATH_VAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_ARRAY() { return GetToken(Stalker2CfgParser.STRING_ARRAY, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 10, RULE_value);
		int _la;
		try {
			State = 91;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PERCENTAGE:
			case INTEGER:
			case NUMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 77;
				number();
				}
				break;
			case LITERAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				Match(LITERAL);
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 3);
				{
				State = 79;
				Match(STRING);
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__0) {
					{
					{
					State = 80;
					Match(T__0);
					State = 81;
					Match(STRING);
					}
					}
					State = 86;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case PATH_REF:
				EnterOuterAlt(_localctx, 4);
				{
				State = 87;
				Match(PATH_REF);
				}
				break;
			case OPEN_BRACE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 88;
				array_ref();
				}
				break;
			case PATH_VAL:
				EnterOuterAlt(_localctx, 6);
				{
				State = 89;
				Match(PATH_VAL);
				}
				break;
			case STRING_ARRAY:
				EnterOuterAlt(_localctx, 7);
				{
				State = 90;
				Match(STRING_ARRAY);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KeyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Struct_keyContext struct_key() {
			return GetRuleContext<Struct_keyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(Stalker2CfgParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Array_refContext array_ref() {
			return GetRuleContext<Array_refContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Set_refContext set_ref() {
			return GetRuleContext<Set_refContext>(0);
		}
		public KeyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_key; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKey(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KeyContext key() {
		KeyContext _localctx = new KeyContext(Context, State);
		EnterRule(_localctx, 12, RULE_key);
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93;
				struct_key();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 94;
				Match(STRING);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 95;
				array_ref();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 96;
				set_ref();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Array_refContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_BRACE() { return GetToken(Stalker2CfgParser.OPEN_BRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(Stalker2CfgParser.INTEGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_BRACE() { return GetToken(Stalker2CfgParser.CLOSE_BRACE, 0); }
		public Array_refContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_array_ref; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArray_ref(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Array_refContext array_ref() {
		Array_refContext _localctx = new Array_refContext(Context, State);
		EnterRule(_localctx, 14, RULE_array_ref);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			Match(OPEN_BRACE);
			State = 100;
			Match(INTEGER);
			State = 101;
			Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Set_refContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_BRACE() { return GetToken(Stalker2CfgParser.OPEN_BRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_BRACE() { return GetToken(Stalker2CfgParser.CLOSE_BRACE, 0); }
		public Set_refContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_set_ref; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSet_ref(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Set_refContext set_ref() {
		Set_refContext _localctx = new Set_refContext(Context, State);
		EnterRule(_localctx, 16, RULE_set_ref);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(OPEN_BRACE);
			State = 104;
			Match(T__1);
			State = 105;
			Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(Stalker2CfgParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PERCENTAGE() { return GetToken(Stalker2CfgParser.PERCENTAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(Stalker2CfgParser.INTEGER, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 18, RULE_number);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3584L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_keyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRUCT_KEY() { return GetToken(Stalker2CfgParser.STRUCT_KEY, 0); }
		public Struct_keyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_key; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStalker2CfgVisitor<TResult> typedVisitor = visitor as IStalker2CfgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStruct_key(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Struct_keyContext struct_key() {
		Struct_keyContext _localctx = new Struct_keyContext(Context, State);
		EnterRule(_localctx, 20, RULE_struct_key);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(STRUCT_KEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
